--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.tianjian.cehrp</groupId>
@@ -8,12 +7,12 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>DataGenerator Maven Webapp</name>
 	<url>http://maven.apache.org</url>
-	
-	
+
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -22,22 +21,19 @@
 			<scope>test</scope>
 		</dependency>
 
-    <dependency>
-  <groupId>org.controlsfx</groupId>
-  <artifactId>controlsfx</artifactId>
-<version>8.40.10</version>
-</dependency>
-    
-	<!--	<dependency>
-			<groupId>net.sf.dbmonster</groupId>
-			<artifactId>dbmonster-core</artifactId>
-			<version>1.0.4</version>
-		</dependency> --> 
-<dependency>
+		<dependency>
+			<groupId>org.controlsfx</groupId>
+			<artifactId>controlsfx</artifactId>
+			<version>8.40.10</version>
+		</dependency>
+
+		<!-- <dependency> <groupId>net.sf.dbmonster</groupId> <artifactId>dbmonster-core</artifactId> 
+			<version>1.0.4</version> </dependency> -->
+		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.8</version>
-		</dependency> 
+		</dependency>
 		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
@@ -69,17 +65,17 @@
 			<artifactId>dom4j</artifactId>
 			<version>1.6.1</version>
 		</dependency>
- 			<dependency>
-            <groupId>jaxen</groupId>
-            <artifactId>jaxen</artifactId>
-            <version>1.1.1</version>
-        </dependency>
- 			<dependency>
-            <groupId>xerces</groupId>
-            <artifactId>xercesImpl</artifactId>
-            <version>2.9.1</version>
-        </dependency>
-        
+		<dependency>
+			<groupId>jaxen</groupId>
+			<artifactId>jaxen</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>xerces</groupId>
+			<artifactId>xercesImpl</artifactId>
+			<version>2.9.1</version>
+		</dependency>
+
 		<dependency>
 			<groupId>oracle</groupId>
 			<artifactId>ojdbc</artifactId>
@@ -88,5 +84,27 @@
 	</dependencies>
 	<build>
 		<finalName>DataGenerator</finalName>
+		<plugins>
+
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+
+			</plugin>
+			<plugin>
+		    <groupId>com.zenjava</groupId>
+		    <artifactId>javafx-maven-plugin</artifactId>
+		    <version>8.6.0</version>
+		    <configuration>
+		        <vendor>songzhi</vendor>
+		        <mainClass>com.songzhi.lanch.GenApp</mainClass>
+		        <bundler>exe</bundler>
+		    </configuration>
+		  </plugin>
+		</plugins>
 	</build>
 </project>
